--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,38 +1,113 @@
-.App {
-  text-align: center;
+.container {
+  background-color: #fcfcfc;
+  height: 70%;
+  display: flex;
+  flex-direction: column;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container h1{
+  color:#252531;
+  font-size: 22px;
+  font-weight: 700;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.container h2{
+  color:#383842;
+  font-size: 20px;
+  font-weight: 600;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container p{
+  color:#191919;
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.container input{
+  color:#383842;
+  font-size: 16px;
+  font-weight: 600;
+}
+
+section{
+  display: flex;
+  flex-direction: column;
+  justify-content:end;
+  align-items: center;
+  border: 1px double #b7005c;
+  height: 550px;
+  width: 450px;
+  margin-top: 150px;
+  margin-left: 350px;
+}
+
+.msg{
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 0;
+}
+
+.msg h1{
+  margin-bottom: 20px;
+}
+
+.msg h3{
+  padding: 0;
+  margin: 0;
+}
+
+.msg p{
+  padding: 0;
+  margin: 0;
+}
+
+
+.cadastro{
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  margin-top: 30px;
+}
+
+.cadastro p{
+  align-items:center;
+  text-align:left;
+  margin: 5px 0px;
+  margin-top: 15px;
+  padding: 0;
+  font-weight: bolder;
+}
+
+.cadastro input{
+  padding: 12px 15px;
+  font-size: 16px;
+  border: 1,5px solid black;
+  border-radius: 10px;
+  width: 100vw;
+  max-width: 382px;
+  font:caption;
+}
+
+button{
+  padding: 15px 10px;
+  gap: 8px;
+  margin-top: 48px;
   color: white;
+  background-color: #b7005c;
+  border: 1px solid white;
+  border-radius: 30px;
 }
 
-.App-link {
-  color: #61dafb;
+.enviocadastro{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  text-align: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.enviocadastro a{
+  text-decoration: none;
+  color: #b7005c;
+  font-size: 14px;
 }
