--- a/my-app/src/paginas/Login/Login.css
+++ b/my-app/src/paginas/Login/Login.css
@@ -1,8 +1,15 @@
 .container {
   background-color: #fcfcfc;
-  height: 70%;
+  height: 100%;
   display: flex;
   flex-direction: column;
+  justify-content:center;
+  align-items: center;
+  border: 1px double #b7005c;
+  height: 500px;
+  width: 400px;
+  margin-top: 100px;
+  margin-left: auto;
 }
 
 .container h1{
@@ -23,22 +30,10 @@
   font-weight: 400;
 }
 
-.container input{
+.cadastro input{
   color:#383842;
   font-size: 16px;
   font-weight: 600;
-}
-
-section{
-  display: flex;
-  flex-direction: column;
-  justify-content:end;
-  align-items: center;
-  border: 1px double #b7005c;
-  height: 550px;
-  width: 450px;
-  margin-top: 150px;
-  margin-left: 350px;
 }
 
 .msg{
@@ -52,16 +47,10 @@ section{
   margin-bottom: 20px;
 }
 
-.msg h3{
+.msg h3, p{
   padding: 0;
   margin: 0;
 }
-
-.msg p{
-  padding: 0;
-  margin: 0;
-}
-
 
 .cadastro{
   display: flex;
@@ -70,29 +59,34 @@ section{
   margin-top: 30px;
 }
 
-.cadastro p{
-  align-items:center;
+.cadastro form{
+  display: flex;
+  flex-direction: column;
+}
+
+.form label{
   text-align:left;
-  margin: 5px 0px;
+  margin: 10px 0px;
   margin-top: 15px;
   padding: 0;
-  font-weight: bolder;
+  font-size: 12px;
 }
 
 .cadastro input{
-  padding: 12px 15px;
-  font-size: 16px;
+  padding: 10px 10px;
   border: 1,5px solid black;
   border-radius: 10px;
-  width: 100vw;
-  max-width: 382px;
+  width: 70vw;
+  max-width: 300px;
   font:caption;
+  font-size: 14px;
+  margin-bottom: 20px;
 }
 
-button{
+.senha button{
   padding: 15px 10px;
   gap: 8px;
-  margin-top: 48px;
+  margin-top: 28px;
   color: white;
   background-color: #b7005c;
   border: 1px solid white;
@@ -104,6 +98,7 @@ button{
   flex-direction: row;
   align-items: center;
   text-align: center;
+  margin-top: 10px;
 }
 
 .enviocadastro a{
